<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ActMain!</string>
    <string name="app_name">Hue Tourism</string>
    <string name="navbar_home_name">Home</string>
    <string name="navbar_search_name">Search</string>
    <string name="navbar_map_name">Map</string>
    <string name="navbar_favorite_name">Favorite</string>
    <string name="navbar_more_name">More</string>
    <string name="place_name">Place</string>
    <string name="bank_name">Bank</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="other_name">Other</string>
    <string name="transport_name">Transport</string>
    <string name="hotel_name">Hotel</string>
    <string name="drink_name">Drink</string>
    <string name="shopping_name">Shopping</string>

    <!-- TAB MORE -->
    <string name="n_h_more">MORE</string>
    <string name="n_selectlanguae">Select language</string>
    <string name="n_language">English</string>
    <string name="n_aboutApp">About Application</string>
	 <string name="n_show">Show</string>
</resources>