<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    android:orientation="vertical" >

    <!-- Screen Design for Game Tab -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:background="@drawable/select_border"
        android:gravity="center"
        android:text="@string/n_h_more"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp" >

            <LinearLayout
                android:id="@+id/setting_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/select_border"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/n_selectlanguae"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:layout_gravity="center"
                    android:layout_margin="20sp"
                    android:background="@drawable/setting_background"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnBackward"
                        android:layout_width="32sp"
                        android:layout_height="32sp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/select_button_bg"
                        android:drawableLeft="@drawable/arrow_back" />

                    <TextView
                        android:id="@+id/tvSelectLanguage"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/n_language"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnForward"
                        android:layout_width="32sp"
                        android:layout_height="32sp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/select_button_bg"
                        android:drawableRight="@drawable/arrow_next" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setting_layout"
                android:layout_margin="10dp"
                android:background="@drawable/select_border"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvAboutApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/n_aboutApp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnInfomation"
                    android:layout_width="wrap_content"
                    android:layout_height="32sp"
                    android:layout_margin="20dp"
                    android:background="@drawable/select_button_bg"
                    android:text="@string/n_show"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" 
                    android:padding="5sp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>